--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="index.js" charset="utf-8"></script>
 </head>
 <body>
+
+    <h3>The current player is: Player <span id="current-player">1</span></h3>
+    <h3 id="result"></h3>
     
     <div class="grid">
         
